--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "dependencies": {
     "chalk": "^4.1.2",
-    "express": "^4.21.1"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "mssql": "^11.0.1"
   }
 }
