--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js" 
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
     "chalk": "^4.1.2",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mssql": "^11.0.1"
+    "mssql": "^11.0.1",
+    "nodemon": "^3.1.7"
   }
 }
