--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "express": "^4.21.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
