--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "flatpickr": "^4.6.13",
     "react": "^18.3.1",
