--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "lottie-react": "^2.4.0"
   },
   "devDependencies": {
     "concurrently": "^9.1.0",
