--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "google-auth-library": "^9.14.2",
+    "googleapis": "^144.0.0",
     "mssql": "^11.0.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
