--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@fseehawer/react-circular-slider": "^2.7.0",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
@@ -20,6 +21,7 @@
     "express": "^4.21.1",
     "flatpickr": "^4.6.13",
     "react": "^18.3.1",
+    "react-circular-slider-svg": "^0.3.0",
     "react-dom": "^18.3.1",
     "react-flatpickr": "^3.10.13",
     "react-router-dom": "^6.27.0"
