--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "react-circular-slider-svg": "^0.3.0",
     "react-dom": "^18.3.1",
     "react-flatpickr": "^3.10.13",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "recharts": "^2.13.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
