--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start": "nodemon backend/server.js",
     "frontend": "npm run dev --prefix frontend",
     "log": "echo 'Frontend is running at http://localhost:5173' && echo 'Backend is running at http://localhost:5000'",
-    "dev": "concurrently \"npm run log\" \"npm run start\" \"npm run frontend\""
+    "dev": "concurrently \"npm run log\" \"npm run start\" \"npm run frontend\"",
+    "setup": "npm install && cd frontend && npm install && cd ../backend && npm install"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
