--- a/backend/package.json
+++ b/backend/package.json
@@ -12,16 +12,20 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
     "chalk": "^4.1.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "google-auth-library": "^9.14.2",
     "googleapis": "^144.0.0",
     "mssql": "^11.0.1",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
+    "passport": "^0.7.0",
+    "passport-linkedin-oauth2": "^2.0.0",
     "pdfkit": "^0.15.1"
   }
 }
