--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "dev": "concurrently \"npm run log\" \"npm run start\" \"npm run frontend\""
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react-linkedin-login-oauth2": "^2.0.1"
   },
   "devDependencies": {
     "concurrently": "^9.1.0",
