--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "concurrently \"npm run log\" \"npm run start\" \"npm run frontend\""
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.5",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
