--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "stripe": "^17.5.0"
   },
   "devDependencies": {
     "concurrently": "^9.1.0",
