--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@fseehawer/react-circular-slider": "^2.7.0",
+    "@stripe/stripe-js": "^5.5.0",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
