--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev": "concurrently \"npm run log\" \"npm run start\" \"npm run frontend\""
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.5.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
