--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@fseehawer/react-circular-slider": "^2.7.0",
     "@stripe/stripe-js": "^5.5.0",
+    "@types/react-big-calendar": "^1.16.1",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
