--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^4.1.0",
     "express": "^4.21.1",
     "flatpickr": "^4.6.13",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-circular-slider-svg": "^0.3.0",
     "react-dom": "^18.3.1",
