--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.0",
+    "moment": "^2.30.1",
     "path": "^0.12.7",
+    "react-big-calendar": "^1.17.1",
     "stripe": "^17.5.0"
   },
   "devDependencies": {
