--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "google-auth-library": "^9.14.2",
     "googleapis": "^144.0.0",
     "mssql": "^11.0.1",
+    "multer": "^1.4.5-lts.1",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
