--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.5",
-    "axios": "^1.7.9",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.5.0",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -22,6 +22,7 @@
     "moment": "^2.30.1",
     "path": "^0.12.7",
     "react-big-calendar": "^1.17.1",
+    "react-hot-toast": "^2.5.1",
     "react-linkedin-login-oauth2": "^2.0.1",
     "stripe": "^17.5.0"
   },
