--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-big-calendar": "^1.17.1",
     "react-hot-toast": "^2.5.1",
     "react-linkedin-login-oauth2": "^2.0.1",
-    "stripe": "^17.5.0"
+    "stripe": "^17.5.0",
+    "vite": "^6.0.11"
   },
   "devDependencies": {
     "concurrently": "^9.1.0",
